# rust-auth0-demo

./: Cargo.toml  README.md  shell.nix
auth-lib/: Cargo.toml
auth-lib/src/: auth.rs  models.rs
auth0-api/: Cargo.toml
auth0-api/src/: main.rs
auth0-cli/: Cargo.toml
auth0-cli/src/: main.rs
